GNOME Bugzilla – Bug 582580
No synthetic ConfigureNotifys - regression
Last modified: 2017-03-18 16:39:49 UTC
Bug 322840 has appeared again. It described by the comment in rdesktop (http://rdesktop.cvs.sourceforge.net/viewvc/rdesktop/rdesktop/xwin.c?view=markup#l_552): 552 /* Wait for a ConfigureNotify, with a equal or larger serial, on the 553 specified window. The event will be removed from the queue. We 554 could use XMaskEvent(StructureNotifyMask), but we would then risk 555 throwing away crucial events like DestroyNotify. 556 557 After a ConfigureWindow, according to ICCCM section 4.1.5, we 558 should recieve a ConfigureNotify, either a real or synthetic 559 one. This indicates that the configure has been "completed". 560 However, some WMs such as several versions of Metacity fails to 561 send synthetic events. See bug 562 http://bugzilla.gnome.org/show_bug.cgi?id=322840. We need to use a 563 timeout to avoid a hang. Tk uses the same approach. */ It's easy to verify if the problem is present, just run "rdesktop -A someserver" (with rdesktop later than 2008/03/26). It will print: WARNING: Broken Window Manager: Timeout while waiting for ConfigureNotify WARNING: Broken Window Manager: doesn't handle restack (window was moved to bottom) I've confirmed the problem with metacity-2.24.0-2.fc10.i386 and I've got reports from Debian Lenny.