window: send synthetic ConfigureNotify events

We might receive ConfigureRequest to change only window stacking
order. According to ICCCM section 4.1.5 we should send synthetic
ConfigureNotify event.

https://bugzilla.gnome.org/show_bug.cgi?id=582580